--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,4 +2,7 @@
     <!-- Content Block -->
     {% block content %} {% endblock %}
     <!-- Navbar block  -->
-    {% block navbar %} {% include 'navbar.html' %} {% endblock %}
+    {% block navbar %} 
+    {% include 'navbar.html' %} 
+    
+    {% endblock %}
