--- a/app/templates/fourOwfour.html
+++ b/app/templates/fourOwfour.html
@@ -1,3 +1,5 @@
 {% extends 'base.html'%} {% block content %}
-<h1>UH-OH!!We can't find the page you're looking for</h1>
+<div>
+    <img src="/app/static/404-error-page-not-found.jpg" alt="" style="width: 100%;">
+</div>
 {% endblock %}
