--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,28 +1,42 @@
-
-<div class="navbar navbar-inverse navbar-expand navbar-dark bg-dark" role="navigation">
-    <div class="container-fluid">
-      <a class="font-weight-900 font navbar-brand font-family-toggle font-size-20px;" href="../#">Cedi News Hub</a>
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+<div class="container navbar">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+          <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="/"> Cedi News Hub </a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav nav-pills nav-justified">
+                  <li class="nav-item">
+                      <a class="nav-link active" href="/#top"> Home </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link smooth-scroll" href="#general news"> General News </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link smooth-scroll" href="#sports"> Sports </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link smooth-scroll" href="#business"> Business </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link smooth-scroll" href="#technology"> Technology </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link smooth-scroll" href="#entertainment"> Entertainment </a>
+                  </li>
+                  
+                  <li class="nav-item">
+                      <a class="nav-link smooth-scroll" href="#science"> Science </a>
+                  </li>
+                  
+              </ul>
+          </div>
       </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li><a style="font-size: 15px; font-style: italic;" href="/">HOME</a></li>
-          <li><a style="font-size: 15px; font-style: italic;" href="/">GENERAL</a></li>
-          <li><a style="font-size: 15px; font-style: italic;" href="/">BUSINESS</a></li>
-          <li><a style="font-size: 15px; font-style: italic;" href="/">SPORTS</a></li>
-          <li><a style="font-size: 15px; font-style: italic;" href="/">TECHNOLOGY</a></li>
-          <li><a style="font-size: 15px; font-style: italic;" href="/">STYLE</a></li>
-          <li><a style="font-size: 15px; font-style: italic;" href="/">POLITICS</a></li>
-        </ul>  
-      </div>
-    </div>
-  </div>
-
-  
-  
+  </nav>
+</div>
